modifing css,  adding js file, and fixing navbar on mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -64,8 +64,7 @@ ul {
 }
 
 /* // XX-Large devices (larger desktops, 1400px and up) */
-@media (min-width: 1400px) {
-}
+@media (min-width: 1400px) {}
 
 /*End Global Rules*/
 /* Start My Components */
@@ -189,17 +188,15 @@ header nav .tuggle-menue {
     }
 }
 
-header nav ul {
-    display: flex;
-}
+
 
 @media (max-width: 767px) {
     header nav ul {
         display: none;
     }
 
-    header nav .tuggle-menue:hover + ul {
-        display: flex;
+    header nav .tuggle-menue+ul {
+        display: none;
         flex-direction: column;
         position: absolute;
         top: 100%;
@@ -208,9 +205,14 @@ header nav ul {
         background-color: #24252a;
     }
 
-    header nav .tuggle-menue:hover + ul li a {
+    header nav .tuggle-menue+ul li a {
         padding: 15px;
     }
+
+}
+
+header nav ul {
+    display: flex;
 }
 
 header nav ul li a {
@@ -751,12 +753,12 @@ header nav .form i {
 }
 
 @media (min-width: 992px) {
-    .our-skills .container > div {
+    .our-skills .container>div {
         flex-basis: 45%;
     }
 }
 
-.our-skills .container > div > h3 {
+.our-skills .container>div>h3 {
     margin: 0 0 30px;
     font-weight: normal;
     text-align: center;
@@ -764,7 +766,7 @@ header nav .form i {
     color: #eee;
 }
 
-.our-skills .container > div > p {
+.our-skills .container>div>p {
     color: #eee;
     line-height: 1.8;
     text-align: center;
@@ -1070,7 +1072,7 @@ header nav .form i {
     color: white;
 }
 
-.subscribe form input[type = 'submit'] {
+.subscribe form input[type='submit'] {
     width: 130px;
     background-color: var(--main-color);
     color: #eeeeee;
@@ -1134,7 +1136,7 @@ header nav .form i {
     height: 200px;
 }
 
-.contact .content form input[type = 'submit'] {
+.contact .content form input[type='submit'] {
     background-color: var(--main-color);
     color: #eeeeee;
     padding: 20px;
